2010-03-18  Pavel Tisnovsky <ptisnovs@redhat.com>

	* patches/jtreg-httpTest.patch: new regression test
	to check if the cacerts keytool database is configured and
	created properly and if SSL is really working.

2010-03-17  Matthias Klose  <doko@ubuntu.com>

        * NEWS: More news.

2010-03-17  Nobuhiro Iwamatsu <iwamatsu@nigauri.org>

	* acinclude.m4 (IT_SET_ARCH_SETTINGS): Define architecture as sh
	for all sh* variants.
	* patches/sh4-support.patch: Likewise.

2010-03-17  Matthias Klose  <doko@ubuntu.com>

        * NEWS: Update for 1.8.

2010-06-03  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(clean-rt): Add missing escapes to join lines
	of if statement.

2010-06-03  Andrew John Hughes  <ahughes@redhat.com>

	* plugin/icedteanp/IcedTeaPluginRequestProcessor.cc,
	* plugin/icedteanp/IcedTeaPluginUtils.cc,
	* plugin/icedteanp/java/sun/applet/PluginAppletViewer.java:
	Synchronise with version on IcedTea6 1.7 branch.

2010-06-03  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(clean-local): Add missing call to clean-rt
	which should have replaced clean-plugs.

2010-03-16  Andrew John Hughes  <ahughes@redhat.com>

	* IcedTeaPlugin.cc,
	* plugin/icedtea/java/netscape/javascript/JSException.java,
	* plugin/icedtea/java/netscape/javascript/JSObject.java,
	* plugin/icedtea/java/netscape/javascript/JSObjectCreatePermission.java,
	* plugin/icedtea/java/netscape/javascript/JSProxy.java,
	* plugin/icedtea/java/netscape/javascript/JSRunnable.java,
	* plugin/icedtea/java/netscape/javascript/JSUtil.java,
	* plugin/icedtea/java/sun/applet/AppletSecurityContextManager.java,
	* plugin/icedtea/java/sun/applet/GetMemberPluginCallRequest.java,
	* plugin/icedtea/java/sun/applet/GetWindowPluginCallRequest.java,
	* plugin/icedtea/java/sun/applet/JavaConsole.java,
	* plugin/icedtea/java/sun/applet/PasswordAuthenticationDialog.java,
	* plugin/icedtea/java/sun/applet/PluginAppletSecurityContext.java,
	* plugin/icedtea/java/sun/applet/PluginAppletViewer.java,